# LeakTracerAndroid

app/src/main/cpp/: CMakeLists.txt  leaktracer_jni.cpp
app/src/main/java/com/wsy/androidleaktracer/: MainActivity.java  NativeMemoryLeakDetector.java
leak-tracer-helpers/: README.md  addr2line  native_heap.txt
